--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         	</ul>
-
         	<span class="moves">0</span> Moves
-
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
@@ -38,8 +36,12 @@
         <div> With <span class="moves">0 </span> Moves and <span class="starsCount">0 </span> Stars.</div>
         <div>Woooooo!</div>
         <div><input type="submit" class="playAgain" value="Play Again!"></input></div>
-
     </div>
+    <section  class="note">
+        <h3>Hey 👋</h3>
+        <p>✦ Hope this can help to boost your IQ level, Try to solve in 10 Moves</p>
+        <h3>ALL THE BEST</h3>
+    </section>
 
    
     <script
